# pneuma

./: .env.example  .gitignore  .pneuma.yaml.example  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  book.toml  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  mdbook.yml  pylint.yml  stale.yml
chat_bot/: injector.py
chat_bot/preprocessing/: anonymizer.py  noise_filter.py  story_extractor.py
core/: background.py  cli.py  doctor.py  env.py  palace.py  registry.py  setup.py
core/auto_init/: analyzer.py  architect.py  miner.py  miner_chunker.py  miner_config.py  miner_state.py  miner_summary.py  templates.py
core/auto_org/: refactor.py  router.py
core/ingestion/: doc_parser.py  pipeline.py
core/rag/: confidence.py  (+1 more)
docs/: README.md  SUMMARY.md  configuration.md  getting-started.md  pneuma-vs-mempalace.md  security_audit_checklist.md  teams-setup.md
mcp_server/: server.py  tool_map.py
scripts/: audit_bot_permissions.py  benchmark_retrieval.py  get_channel_id.py  verify_no_egress.py
tests/: conftest.py  test_auto_init.py  test_auto_org.py  test_chat_unified.py  test_concurrency.py  test_diary_retention.py  test_doc_parser.py  test_e2e_openpilot.py  test_e2e_stdio.py  test_env.py  test_ingestion.py  test_integration.py  test_mcp_disconnect.py  test_mcp_tools.py  test_miner.py  test_miner_chunker.py  test_miner_config.py  test_miner_state.py  test_miner_summary.py  test_no_egress.py  test_noise_filter.py  test_perf_regression.py  test_prompt_injection.py  test_retrieval_count.py  test_smoke.py  test_teams_chat.py  test_teams_ingest.py
(+29 files in other folders)
